global-style-sync dark mode checkbox fix

--- a/app/assets/stylesheets/shared/form.scss
+++ b/app/assets/stylesheets/shared/form.scss
@@ -666,7 +666,6 @@ input[type="number"]::-webkit-outer-spin-button {
   }
 
   .form-check-input {
-    background-color: $gray-300;
     border-color: $border-color-dark;
   }
 
